added volume button

--- a/style.css
+++ b/style.css
@@ -327,21 +327,20 @@ body {
 
 .range{
     position: relative;
-    top: 6px;
-   
+    top: 6px;   
 }
 
 .range input{
     cursor: pointer;
+    transform: scale(.9);
 }
 
-  
   
   .progress {
     position: absolute;
     height: 100%;
-    background-color: #1ed760; /* Set the color you want for the progress */
-    width: 0%; /* Start at 0% and increase dynamically */
+    background-color: #1ed760; 
+    width: 0%; 
     filter: invert(1);
   }
   
