--- a/mediaquerry.css
+++ b/mediaquerry.css
@@ -1,5 +1,5 @@
-@media (max-width: 1400px){
-    .left{
+@media (max-width: 1400px) {
+    .left {
         position: absolute;
         left: -100%;
         transition: all .3s;
@@ -8,7 +8,7 @@
         background-color: black;
     }
 
-    .close{
+    .close {
         display: block;
     }
 
@@ -19,17 +19,91 @@
         width: 30px;
     }
 
-    .right{
-        width: 100vw;
+    .right {
+        /* width: 100vw; */
     }
 
-    .playbar{
+    .playbar {
         width: 77vw;
-        bottom: 0px;
+        bottom: 0;
     }
 
-    .hamburger{
+    .hamburger {
         display: block;
     }
 
 }
+
+
+
+@media (max-width: 600px) {
+
+    /* .container{
+        width: 100vw;
+        height: 100vh;
+    } */
+
+    .right {
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .cardContainer {
+        display: flex;
+        /* gap: 10px; */
+        flex-wrap: wrap;
+        margin: 30px;
+        overflow-y: auto;
+        max-height: 55vh;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .playbar {
+        position: absolute;
+        bottom: 1px;
+        filter: invert(1);
+        background-color: #dad5d5;
+        width: 83%;
+        padding: 15px;
+        border-radius: 10px;
+        height: 150px;
+        bottom: 86px;
+
+    }
+
+
+
+    .playbarContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .songButtons {
+        display: flex;
+        gap: 45px;
+        left: 0;
+    }
+
+    .songTime {
+        position: relative;
+        left: 153px;
+    }
+
+    .volume img {
+        position: relative;
+        right: 78px;
+        bottom: -30px;
+    }
+
+
+}
+
+
+
+
+
+@media (max-width: 800px) {}
